--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
     <label><input type="checkbox" name="objects" value="sunglasses"> Sunglasses</label>
     <label><input type="checkbox" name="objects" value="hairbrush"> Hairbrush</label>
     <br><br>
-    <label><input type="checkbox" name="include_straps"> Include Straps/Seam Allowance</label>
+    <label><input type="checkbox" name="include_straps"> Include Seam Allowance</label>
     <br><br>
     <button type="submit">Generate Pattern</button>
   </form>
